# sapp

./: .gcloudignore  .gitignore  Dockerfile  README.rst  app.py  pyproject.toml
sapp/: infer.py  search.py
tests/: test_sapp.py
